feat(accounts): update dependencies and clean up unused global using
Updated NuGet package references to their latest versions:
- Microsoft.Extensions.* packages updated to 9.0.10.
- Refit packages updated to 8.0.0; removed Refit.SourceGenerator.
- Microsoft.EntityFrameworkCore updated to 9.0.10.
- bunit updated to 1.40.0.

Removed unused `global using` directive for
`LowlandTech.Accounts.Frontend.Infrastructure.Http`.

Note: A BOM character was introduced in the project file,
likely unintentionally.

--- a/src/LowlandTech.Accounts.Abstractions/LowlandTech.Accounts.Abstractions.csproj
+++ b/src/LowlandTech.Accounts.Abstractions/LowlandTech.Accounts.Abstractions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -27,21 +27,20 @@
 
   <ItemGroup>
     <PackageReference Include="Lamar" Version="15.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.10" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="MudBlazor" Version="8.13.0" />
 
     <!-- Refit for API client generation -->
-    <PackageReference Include="Refit" Version="7.0.0" />
-    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
-    <PackageReference Include="Refit.SourceGenerator" Version="7.0.0" PrivateAssets="all" />
+    <PackageReference Include="Refit" Version="8.0.0" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
 
     <!-- Test infrastructure -->
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     <PackageReference Include="xunit.extensibility.core" Version="2.9.3" />
-    <PackageReference Include="bunit" Version="1.33.3" />
+    <PackageReference Include="bunit" Version="1.40.0" />
   </ItemGroup>
 </Project>
