--- a/tests/LowlandTech.Accounts.Tests/LowlandTech.Accounts.Tests.csproj
+++ b/tests/LowlandTech.Accounts.Tests/LowlandTech.Accounts.Tests.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageReference Include="bunit" Version="1.40.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.55.0" />
   </ItemGroup>
   <ItemGroup><!-- ProjectReference Include="..\Other\Other.csproj" /> -->
   
