feat(accounts): refactor project structure and upgrade dependencies
- Updated `.gitignore` to include new ignored files.
- Refactored `LowlandTech.Accounts.sln` with updated project GUIDs.
- Introduced `AccountsConfig.cs` for plugin constants and metadata.
- Upgraded `LowlandTech.Abstractions` to version `2025.10.4`.
- Added `LowlandTech.Plugins` package to relevant projects.
- Enhanced `AccountsContext` with schema and in-memory DB support.
- Updated entity configurations for stricter FK constraints.
- Replaced `List` with `HashSet` for `UserAccount` collections.
- Removed legacy `TestingFeatures.cs` and migrated to new testing framework.
- Upgraded xUnit to version `3.1.0` and added `LowlandTech.Testing.Features`.
- Adjusted `GlobalUsings.cs` to reflect new namespaces and dependencies.

--- a/samples/LowlandTech.Accounts.SampleApi/LowlandTech.Accounts.SampleApi.csproj
+++ b/samples/LowlandTech.Accounts.SampleApi/LowlandTech.Accounts.SampleApi.csproj
@@ -16,7 +16,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.8.11" />
-    <PackageReference Include="LowlandTech.Abstractions" Version="1.0.1" />
+    <PackageReference Include="LowlandTech.Abstractions" Version="2025.10.4" />
+    <PackageReference Include="LowlandTech.Plugins" Version="2025.10.4" />
     <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="15.0.0" />
   </ItemGroup>
 
