--- a/tests/LowlandTech.Accounts.Tests/LowlandTech.Accounts.Tests.csproj
+++ b/tests/LowlandTech.Accounts.Tests/LowlandTech.Accounts.Tests.csproj
@@ -9,14 +9,15 @@
     <AssemblyName>LowlandTech.Accounts.Tests</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.v3" Version="3.1.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageReference Include="bunit" Version="1.40.0" />
     <PackageReference Include="Microsoft.Playwright" Version="1.55.0" />
-    <PackageReference Include="LowlandTech.Abstractions" Version="1.0.1" />
+    <PackageReference Include="LowlandTech.Abstractions" Version="2025.10.4" />
+    <PackageReference Include="LowlandTech.Testing.Features" Version="2025.10.2" />
   </ItemGroup>
   <ItemGroup><!-- ProjectReference Include="..\Other\Other.csproj" /> -->
   
